Modernize netconf-client-mdsal
Use HashMap.newHashMap() and Path.of(), as noted by modernizer.

Change-Id: I596876103dcd5eb2157b9be0cb1b6ea8f0c1afc0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 8d2fda5d793e983e85bef7bb648117567267dac3)